--- a/Intelligence.html
+++ b/Intelligence.html
@@ -24,7 +24,7 @@
         </div>
         <div class="titre">L'Intelligence Artificielle</div>
         <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique fugit, consequuntur nesciunt omnis eum quasi officia nemo unde dolore vitae voluptas ratione illo odit perferendis impedit eveniet quidem. Nam, laudantium.</div>
-        <iframe class="videosize" src="https://www.youtube.com/embed/watch?v=qsYOgV1jQWc?autoplay=1" frameborder="0"></iframe>
+        <iframe class="videosize" src="https://www.youtube.com/embed/qsYOgV1jQWc?autoplay=1" frameborder="0"></iframe>
         <div class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem sunt dignissimos odit quae inventore ex, excepturi praesentium perspiciatis necessitatibus eos velit. Sapiente veniam dolorum et soluta, cum numquam aperiam quisquam!</div>
         
         
