--- a/Createur.html
+++ b/Createur.html
@@ -23,10 +23,15 @@
             <a href="Createur.html" class="selected">Profil Createur</a>
         </div>
         <div class="titre">Profil Createur</div>
-        <div class="description">Allo</div>
-        
-        <div class="description"></div>
-        
+        <div class="description">Site créé par Dereck Desjardins</div>
+        <div class="avatar">
+            <img class="adjustavatar" src="images/avatar.png" alt="">
+        </div>
+        <div class="description">Sources</div>
+        <div class="sources"><a href="https://fr.wikipedia.org/wiki/Intelligence_artificielle">: https://fr.wikipedia.org/wiki/Intelligence_artificielle</a></div>
+        <div class="sources"><a href="https://www.futura-sciences.com/tech/definitions/robotique-robotique-603/">: https://www.futura-sciences.com/tech/definitions/robotique-robotique-603/</a></div>
+        <div class="sources"><a href="https://www.thesaurus.gouv.qc.ca/tag/terme.do?id=11543">: https://www.thesaurus.gouv.qc.ca/tag/terme.do?id=11543</a></div>
+        <div class="sources"><a href="https://fr.theastrologypage.com/web-design">: https://fr.theastrologypage.com/web-design</a></div>
     </div>
 </body>
 </html>
