--- a/Intelligence.html
+++ b/Intelligence.html
@@ -23,9 +23,9 @@
             <a href="Createur.html">Profil Createur</a>
         </div>
         <div class="titre">L'Intelligence Artificielle</div>
-        <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique fugit, consequuntur nesciunt omnis eum quasi officia nemo unde dolore vitae voluptas ratione illo odit perferendis impedit eveniet quidem. Nam, laudantium.</div>
-        <iframe class="videosize" src="https://www.youtube.com/embed/qsYOgV1jQWc?autoplay=1" frameborder="0"></iframe>
-        <div class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem sunt dignissimos odit quae inventore ex, excepturi praesentium perspiciatis necessitatibus eos velit. Sapiente veniam dolorum et soluta, cum numquam aperiam quisquam!</div>
+        <div class="description">L'intelligence artificielle (IA) est un « ensemble de théories et de techniques mises en œuvre en vue de réaliser des machines capables de simuler l'intelligence humaine »</div>
+        <iframe class="videosize" src="https://www.youtube.com/embed/1KSQW0DgEBo?autoplay=1" frameborder="0"></iframe>
+        <div class="description">Souvent classée dans le groupe des mathématiques et des sciences cognitives, elle fait appel à la neurobiologie computationnelle (particulièrement aux réseaux neuronaux) et à la logique mathématique (partie des mathématiques et de la philosophie). Elle utilise des méthodes de résolution de problèmes à forte complexité logique ou algorithmique. Par extension, elle comprend, dans le langage courant, les dispositifs imitant ou remplaçant l'homme dans certaines mises en œuvre de ses fonctions cognitives.</div>
         
         
     </div>
