--- a/Robotique.html
+++ b/Robotique.html
@@ -23,9 +23,9 @@
             <a href="Createur.html">Profil Createur</a>
         </div>
         <div class="titre">Robotique</div>
-        <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique fugit, consequuntur nesciunt omnis eum quasi officia nemo unde dolore vitae voluptas ratione illo odit perferendis impedit eveniet quidem. Nam, laudantium.</div>
+        <div class="description">Ensemble des domaines scientifiques et industriels en rapport avec la conception et la réalisation de robots. Dans le domaine industriel, la robotique produit des automates réalisant des fonctions précises sur des chaînes de montage. La robotique produit aussi des engins capables de se mouvoir dans différents milieux : dangereux (pollués, radioactifs...), aérien, sous-marins, spatiaux.</div>
         <iframe class="videosize" src="https://www.youtube.com/embed/n5tB2-7CxP4" frameborder="0"></iframe>
-        <div class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem sunt dignissimos odit quae inventore ex, excepturi praesentium perspiciatis necessitatibus eos velit. Sapiente veniam dolorum et soluta, cum numquam aperiam quisquam!</div>
+        <div class="description">La robotique s'est également étendue récemment au marché grand-public avec des engins autonomes pour assurer seuls certaines fonctions (aspirateurs, tondeuses à gazon...) ou pour des activités ludiques (robots compagnons, robots jouets...).</div>
         
         
     </div>
