--- a/Securite.html
+++ b/Securite.html
@@ -23,9 +23,9 @@
             <a href="Createur.html">Profil Createur</a>
         </div>
         <div class="titre">La Securite Informatique</div>
-        <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique fugit, consequuntur nesciunt omnis eum quasi officia nemo unde dolore vitae voluptas ratione illo odit perferendis impedit eveniet quidem. Nam, laudantium.</div>
+        <div class="description">Ensemble de mesures de sécurité physiques, logiques et administratives, et de mesures d'urgence, mises en place dans une organisation, en vue d'assurer la protection de ses biens informatiques, la confidentialité des données de son système d'information et la continuité de service.</div>
         <img class="centered2" src="images/securite.png" alt="">
-        <div class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem sunt dignissimos odit quae inventore ex, excepturi praesentium perspiciatis necessitatibus eos velit. Sapiente veniam dolorum et soluta, cum numquam aperiam quisquam!</div>
+        <div class="description">La sécurité informatique comporte trois aspects : la protection physique des installations, la protection des données contre la consultation, la modification ou la dégradation, effectuées de façon volontaire ou accidentelle par des personnes non autorisées, et la protection de la fiabilité de ces données (c'est-à-dire la conservation de leur contenu au fil du temps ou lors de leur traitement).</div>
         
     </div>
 </body>
