--- a/Web.html
+++ b/Web.html
@@ -23,9 +23,9 @@
             <a href="Createur.html">Profil Createur</a>
         </div>
         <div class="titre">La Conception Web</div>
-        <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique fugit, consequuntur nesciunt omnis eum quasi officia nemo unde dolore vitae voluptas ratione illo odit perferendis impedit eveniet quidem. Nam, laudantium.</div>
+        <div class="description">La conception Web est un processus de développement Web pour créer un site Web qui se concentre sur des facteurs esthétiques comme la mise en page, l'interface utilisateur et d'autres images visuelles afin de rendre le site Web plus attrayant visuellement et facile à utiliser.</div>
         <img class=" smallerimage" src="images/web.png" alt="">
-        <div class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem sunt dignissimos odit quae inventore ex, excepturi praesentium perspiciatis necessitatibus eos velit. Sapiente veniam dolorum et soluta, cum numquam aperiam quisquam!</div>
+        <div class="description">La plupart des sites Web sont créés à l'aide d'un langage codé appelé Hypertext Markup Language (HTML). Pour qu'un site Web soit affiché avec succès sur le navigateur client, il doit suivre les règles de cette langue. Les balises HTML identifient le contenu du site Web pour chaque page. Les feuilles de style en cascade (CSS) sont ensuite utilisées pour définir l'apparence visuelle globale de chaque page. Le résultat est basé sur la combinaison de ces éléments.</div>
         
     </div>
 </body>
