--- a/Accueil.html
+++ b/Accueil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceuil</title>
+    <title>Accueil</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -15,14 +15,14 @@
     <div class="main">
         <div class="menu">
             <img class="favicon" src="images/favicon.png" alt="">
-            <a href="Acceuil.html" class="selected">Acceuil</a>
+            <a href="Accueil.html" class="selected">Accueil</a>
             <a href="Robotique.html">Robotique</a>
             <a href="Intelligence.html">Intelligence Artificielle</a>
             <a href="Securite.html">Securite informatique</a>
             <a href="Web.html">Conception Web</a>
             <a href="Createur.html">Profil Createur</a>
         </div>
-        <div class="titre">Acceuil</div>
+        <div class="titre">Accueil</div>
         <img class="centered" src="images/favicon.png" alt="">
         <div class="description">Bienvenue sur mon site, créé dans le cadre du cours 420KB2, ayant pour but de présenter quelques domaine de l'informatique tel la robotique, l'intelligence artificielle, la sécurité informatique et la Conception Web. Vous pouvez en apprendre plus en sélectionnant la section qui vous interesse au haut de cette page.
         </div>
