--- a/Createur.html
+++ b/Createur.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceuil</title>
+    <title>Profil Créateur</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -15,7 +15,7 @@
     <div class="main">
         <div class="menu">
             <img class="favicon" src="images/favicon.png" alt="">
-            <a href="Acceuil.html">Acceuil</a>
+            <a href="Accueil.html">Accueil</a>
             <a href="Robotique.html">Robotique</a>
             <a href="Intelligence.html">Intelligence Artificielle</a>
             <a href="Securite.html">Securite informatique</a>
